resolved a problem with uvicorn that didn't recognized app folder as a module

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,5 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./data:/app/data
+      - ./app/data:/app/data
+    restart: always
